--- a/.gitignore
+++ b/.gitignore
@@ -69,5 +69,6 @@ node_modules/
 dist/
 npm-debug.log
 yarn-error.log
-
+package-lock.json
+.env
 # End of https://www.toptal.com/developers/gitignore/api/vue,vuejs,visualstudiocode
