--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "pinia": "^2.1.7",
+    "sweetalert2": "^11.12.4",
     "vue": "^3.4.29",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.3"
