--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "sweetalert2": "^11.12.4",
     "vue": "^3.4.29",
     "vue-chartjs": "^5.3.1",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-carousel": "^0.3.3",
+    "vue3-websocket": "^2.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
